--- a/roles/azure/tasks/azure_spinup.yml
+++ b/roles/azure/tasks/azure_spinup.yml
@@ -7,7 +7,7 @@
     admin_username: "{{ azure_admin }}"
     ssh_password_enabled: false
     ssh_public_keys:
-      - path: /home/azureuser/.ssh/authorized_keys
+      - path: /home/{{ azure_admin }}/.ssh/authorized_keys
         key_data: "{{ public_key }}"
     network_interfaces: "{{ azure_nic_name }}"
     image:
