--- a/roles/azure/tasks/azure_spinup.yml
+++ b/roles/azure/tasks/azure_spinup.yml
@@ -11,7 +11,7 @@
         key_data: "{{ public_key }}"
     network_interfaces: "{{ azure_nic_name }}"
     tag:
-      env: {{ azure_tag }}
+      env: "{{ azure_tag }}"
     image:
       offer: CentOS
       publisher: OpenLogic
