--- a/roles/azure/tasks/azure_spinup.yml
+++ b/roles/azure/tasks/azure_spinup.yml
@@ -10,7 +10,7 @@
       - path: /home/{{ azure_admin }}/.ssh/authorized_keys
         key_data: "{{ public_key }}"
     network_interfaces: "{{ azure_nic_name }}"
-    tag:
+    tags:
       env: "{{ azure_tag }}"
     image:
       offer: CentOS
