--- a/roles/azure/tasks/azure_spinup.yml
+++ b/roles/azure/tasks/azure_spinup.yml
@@ -1,4 +1,13 @@
 ---
+- name: Create virtual network interface card
+  azure_rm_networkinterface:
+    resource_group: "{{ azure_resource_group }}"
+    name: "{{ azure_vm_name }}Nic"
+    virtual_network: "{{ azure_vnet_name }}"
+    subnet: "{{ azure_subnet_name }}"
+    public_ip_name: "{{ azure_public_ip_name }}"
+    security_group: "{{ azure_security_group }}"
+
 - name: Create VM
   azure_rm_virtualmachine:
     resource_group: "{{ azure_resource_group }}"
