--- a/roles/azure/tasks/azure_spinup.yml
+++ b/roles/azure/tasks/azure_spinup.yml
@@ -1,4 +1,16 @@
 ---
+
+- name: Create public IP address
+  azure_rm_publicipaddress:
+    resource_group: "{{ azure_resource_group }}"
+    allocation_method: Static
+    name: "{{ azure_vm_name }}PublicIP"
+  register: output_ip_address
+
+- name: Dump public IP for VM which will be created
+  debug:
+    msg: "The public IP is {{ output_ip_address.state.ip_address }}."
+
 - name: Create virtual network interface card
   azure_rm_networkinterface:
     resource_group: "{{ azure_resource_group }}"
