update PM2 deploy, add vars for substituion

--- a/roles/middleware/tasks/main.yml
+++ b/roles/middleware/tasks/main.yml
@@ -31,9 +31,15 @@
   args:
     chdir: '{{ deploymentPath }}'
 
-- name: Start pm2 managed app
-  command: pm2 start index.js --interpreter babel-node -e js -f
+- name: Stop pm2 managed app
+  shell: pm2 stop all
+
+- name: Build node binaries
+  command: npm run-script build
   args:
     chdir: '{{ deploymentPath }}'
 
-  
+- name: Start pm2 managed app
+  shell: " DB_HOST={{ db_host }} DB_USER={{ db_user}} DB_PASS={{db_pass}} DB_DB={{db_database}} pm2 start ./index.js"
+  args:
+    chdir: '{{ deploymentPath }}/build'
