update rules to add port 80

--- a/baseline_rhel.yml
+++ b/baseline_rhel.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: yes
   vars: 
-    - web_deploy: false
+    - web_deploy: true
     - mw_deploy: false
   tasks: 
     - include_role:
