--- a/roles/azure/tasks/azure_infra.yml
+++ b/roles/azure/tasks/azure_infra.yml
@@ -28,7 +28,7 @@
   debug:
     msg: "The public IP is {{ output_ip_address.state.ip_address }}."
 
-- name: Create Network Security Group that allows SSH
+- name: Create Network Security Group that allows SSH and HTTP access
   azure_rm_securitygroup:
     resource_group: "{{ azure_resource_group }}"
     name: "{{ azure_security_group }}"
@@ -38,6 +38,12 @@
         destination_port_range: 22
         access: Allow
         priority: 1001
+        direction: Inbound
+      - name: HTTP
+        protocol: Tcp
+        destination_port_range: 80
+        access: Allow
+        priority: 1002
         direction: Inbound
 
 - name: Create virtual network interface card
