--- a/roles/mysql_gcp/tasks/main.yml
+++ b/roles/mysql_gcp/tasks/main.yml
@@ -14,6 +14,7 @@
     service_account_file: "{{ gcp_cred_file }}"
     state: present
     database_version: MYSQL_5_7
+    metadata: {}
   register: instance
 
 - name: create a user
@@ -26,6 +27,7 @@
     auth_kind: serviceaccount
     service_account_file: "{{ gcp_cred_file }}"
     state: present
+     metadata: {}
 
 - name: create a database
   gcp_sql_database:
@@ -36,3 +38,4 @@
     auth_kind: serviceaccount
     service_account_file: "{{ gcp_cred_file }}"
     state: present
+     metadata: {}
