--- a/db_deploy.yml
+++ b/db_deploy.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: localhost
+  vars:
+    ansible_python_interpreter: /var/lib/awx/venv/ansible/bin/python
   tasks: 
     - include_role:
        name: mysql_gcp
