instance in db error handled

--- a/roles/mysql_gcp/tasks/main.yml
+++ b/roles/mysql_gcp/tasks/main.yml
@@ -20,7 +20,7 @@
   gcp_sql_user:
     name: "{{ db_user}}"
     password: "{{ db_pass }}"
-    instance: "{{ db_db }}"
+    instance: "{{ instance }}"
     project: "{{ gcp_project }}"
     host: "%"
     auth_kind: serviceaccount
