--- a/roles/mysql_gcp/tasks/main.yml
+++ b/roles/mysql_gcp/tasks/main.yml
@@ -45,6 +45,13 @@
 - set_stats:
     data: 
       db_host: "{{ db_host }}"
+      db_user: "{{ db_user }}"
+      db_pass: "{{ db_pass }}"
 
 - debug: 
-    msg: "{{db_host}}"
+    msg: 
+      - "You passed additional verbosity flags, so you must be troubleshooting. Here's some info:"
+      - "Host: {{db_host}}"
+      - "Username: {{db_user}}"
+      - "Password: {{db_pass}}"
+    verbosity: 2
