--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,3 +3,9 @@
   selinux:
     policy: targeted
     state: permissive
+
+- name: Stop firewalld 
+  service:
+    name: firewalld
+    state: stopped
+    enabled: no
