--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,8 +4,7 @@
     policy: targeted
     state: permissive
 
-- name: Stop firewalld 
-  service:
-    name: firewalld
-    state: stopped
-    enabled: no
+- firewalld:
+    service: http
+    permanent: yes
+    state: enabled
