--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Install pip packages needed
+  pip:
+    name: firewalld
+    
 - name: Disable SELinux
   selinux:
     policy: targeted
