--- a/roles/middleware/tasks/main.yml
+++ b/roles/middleware/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: sleep for 300 seconds and continue with play
+  wait_for:
+    timeout: 30
+  delegate_to: localhost
+
 - name: Install NodeJS packages
   yum:
     name:
