wait_for pre handoff

--- a/roles/aws/tasks/main.yml
+++ b/roles/aws/tasks/main.yml
@@ -217,3 +217,7 @@
     data:
       express_server: "{{ express_server }}"
   
+- name: sleep for 120 seconds and continue with play
+  wait_for:
+    timeout: 300
+  delegate_to: localhost
