--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Disable firewalld for now
+  service: 
+    name: firewalld
+    status: stopped
+    enabled: no
 - name: Install NodeJS and HTTPD packages
   yum:
     name:
