--- a/db_deploy.yml
+++ b/db_deploy.yml
@@ -1,5 +1,17 @@
 ---
 - hosts: localhost
+  vars:
+    db_type: ""
+    db_info:
+      mysql:
+        database_version: MYSQL_5_6
+        backend_type: SECOND_GEN
+        tier: db-g1-small
+      postgres:
+        database_version: POSTGRES_9_6
+        backend_type: SECOND_GEN
+        tier: db-g1-small
+
   tasks: 
     - name: Preflight check to ensure vars are defined
       assert:
@@ -7,6 +19,14 @@
           - db_pass != ""
           - db_db != ""
           - db_user != ""
+          - db_type == 'mysql' or 'postgres'
+          - db_provider != ""
+          - db_state == 'present' or 'absent'
 
     - include_role:
-       name: mysql_gcp
+       name: db_gcp
+      when: db_provider == "gcp"
+    
+    - include_role:
+       name: db_aws
+      when: db_provider == "aws"
