--- a/db_deploy.yml
+++ b/db_deploy.yml
@@ -1,10 +1,11 @@
 ---
 - hosts: localhost
   vars:
+    gcp_region: us-central1
     db_type: ""
     db_info:
       mysql:
-        database_version: MYSQL_5_6
+        database_version: MYSQL_5_7
         backend_type: SECOND_GEN
         tier: db-g1-small
       postgres:
