--- a/roles/db_gcp/tasks/main.yml
+++ b/roles/db_gcp/tasks/main.yml
@@ -7,14 +7,13 @@
         authorized_networks:
         - name: interweb
           value: 0.0.0.0/0
-      tier: db-g1-small
+      tier: db-n1-standard-1
     region: us-central1
     project: "{{ gcp_project }}"
     auth_kind: serviceaccount
     service_account_file: "{{ gcp_cred_file }}"
     state: present
     database_version: MYSQL_5_7
-    backend_type: db-n1-standard-1
   register: instance
     
 - name: create a user
