--- a/roles/db_gcp/tasks/config.yml
+++ b/roles/db_gcp/tasks/config.yml
@@ -19,3 +19,23 @@
     auth_kind: serviceaccount
     service_account_file: "{{ gcp_cred_file }}"
     state: present
+
+- set_fact:
+    db_host: "{{item.ipAddress}}"
+  with_items: "{{ instance.ipAddresses }}"
+  when: item.type == 'PRIMARY'
+
+- set_stats:
+    data: 
+      db_host: "{{ db_host }}"
+      db_user: "{{ db_user }}"
+      db_pass: "{{ db_pass }}"
+    
+
+- debug: 
+    msg: 
+      - "You passed additional verbosity flags, so you must be troubleshooting. Here's some info:"
+      - "Host: {{db_host}}"
+      - "Username: {{db_user}}"
+      - "Password: {{db_pass}}"
+    verbosity: 2
