--- a/roles/db_gcp/tasks/main.yml
+++ b/roles/db_gcp/tasks/main.yml
@@ -17,44 +17,6 @@
     backend_type: "{{ db_info[db_type].backend_type }}"
   register: instance
     
-- name: create a user
-  gcp_sql_user:
-    name: "{{ db_user}}"
-    password: "{{ db_pass }}"
-    instance: "{{ instance }}"
-    project: "{{ gcp_project }}"
-    host: "%"
-    auth_kind: serviceaccount
-    service_account_file: "{{ gcp_cred_file }}"
-    state: present
+- name: Bring in config tasks
+  include_tasks: config.yml
   when: db_state == 'present'
-
-- name: create a database
-  gcp_sql_database:
-    name: "{{ db_db }}"
-    charset: utf8
-    instance: "{{ instance }}"
-    project: "{{ gcp_project }}"
-    auth_kind: serviceaccount
-    service_account_file: "{{ gcp_cred_file }}"
-    state: present
-  when: db_state == 'present'
-
-- set_fact:
-    db_host: "{{item.ipAddress}}"
-  with_items: "{{ instance.ipAddresses }}"
-  when: "{{ item.type == 'PRIMARY' }}"
-
-- set_stats:
-    data: 
-      db_host: "{{ db_host }}"
-      db_user: "{{ db_user }}"
-      db_pass: "{{ db_pass }}"
-
-- debug: 
-    msg: 
-      - "You passed additional verbosity flags, so you must be troubleshooting. Here's some info:"
-      - "Host: {{db_host}}"
-      - "Username: {{db_user}}"
-      - "Password: {{db_pass}}"
-    verbosity: 2
